--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <script src="./js/main.js" defer></script>
     <title>Tropical Spinner</title>
 </head>
-<body class="bg-img h-vh ovr-hide pos-rel flx">
-    <img src="./img/logo.png" class="w-15 logo" alt="logo"/>
+<body class="bg-img h-vh ovr-hide pos-rel flx flx-jc-ce">
+    <img src="./img/logo.png" class="w-15 logo z-top" alt="logo"/>
 
-    <section id="spinner" class="w-100 flx flx-cent"></section>
+    <!-- <section id="spinner" class="w-100 flx flx-cent"></section> -->
     <section class="txtBox bg-lght flx flx-col flx-jc-sp flx-ai-ce w-100 h-50 pos-rel">
         <!-- User Stats -->
         <div class="flx flx-cent w-50 contCont">
