--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="ovr-hide">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
     <script src="./js/main.js" defer></script>
     <title>Tropical Spinner</title>
 </head>
-<body class="bg-img h-vh ovr-hide pos-rel flx flx-jc-ce">
+<body class="bg-img h-vh ovr-hide pos-rel flx">
     <img src="./img/logo.png" class="w-15 logo z-top" alt="logo"/>
 
     <!-- <section id="spinner" class="w-100 flx flx-cent"></section> -->
@@ -18,11 +18,11 @@
         <div class="flx flx-cent w-50 contCont">
             <div class="w-35 flx flx-cent cont">
                 <h4 class="txt-drk mont-bld" id="balance">Balance:</h4>
-                <h4 class="txt-wht mont-bld m-l-auto" id="balVal">$250</h4>
+                <h4 class="txt-wht mont-bld m-l-auto balVal" id="balVal">$250</h4>
             </div>
             <div class="w-35 flx flx-cent m-l-auto cont">
                 <h4 class="txt-drk mont-bld" id="spin">Spins:</h4>
-                <h4 class="txt-wht mont-bld m-l-auto" id="spinVal">3</h4>
+                <h4 class="txt-wht mont-bld m-l-auto spinVal" id="spinVal">3</h4>
             </div>
         </div>
 
@@ -42,6 +42,16 @@
             <img src="./img/lucky.png" class="w-10 lucky" alt="lucky"/>
             <h1 class="txt-al-ce txt-drk mont-blk w-50" id="win">YOU WON!</h1>
             <h1 class="txt-al-ce txt-drk mont-blk w-50" id="lose">YOU LOST</h1>
+            <div class="flx flx-cent w-100 contCont">
+                <div class="w-35 flx flx-cent cont">
+                    <p class="txt-drk mont-bld" id="balance">Balance:</p>
+                    <p class="txt-wht mont-bld m-l-auto balVal" id="balVal">$250</p>
+                </div>
+                <div class="w-35 flx flx-cent m-l-auto cont">
+                    <p class="txt-drk mont-bld" id="spin">Spins:</p>
+                    <p class="txt-wht mont-bld m-l-auto spinVal" id="spinVal">3</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
