--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="ovr-y-scr ovr-xhide">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
     <script src="./js/main.js" defer></script>
     <title>Tropical Spinner</title>
 </head>
-<body class="bg-img h-vh ovr-hide pos-rel flx">
+<body class="bg-img h-vh ovr-hide pos-rel flx flx-jc-ce">
     <img src="./img/logo.png" class="w-15 logo" alt="logo"/>
 
     <section id="spinner" class="w-100 flx flx-cent"></section>
