--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <title>Vegas Spinner</title>
 </head>
 <body class="bg-img h-vh ovr-hide pos-rel flx flx-jc-ce">
+
     <img src="./imgVeg/logo.png" class="w-5 logo" alt="logo"/>
+    <img src="./imgVeg/on.png" class="pos-abs cursor sound z-top" alt="sound"/>
 
     <section id="spinner" class="w-100 flx flx-cent"></section>
     <section class="txtBox bg-grad1 flx flx-col flx-jc-sp flx-ai-ce w-100 h-50 pos-rel">
@@ -55,7 +57,7 @@
             window.plushExecuted = true;
             window.Plush && window.Plush.runFlow('https://g.mustangeight.com/', {
             'campaign:id': '',
-            'country:locale': 'AU',
+            'country:locale': 'CA',
              });
           }
         };
